// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem: should render custom left padding 1`] = `
<div
  className="root"
>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render custom left padding with light font weight 1`] = `
<div
  className="root"
>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        light={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render custom left padding with light font weight and secondary text 1`] = `
<div
  className="root"
>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        light={true}
        secondary={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render custom left padding with light font weight, secondary text and onclick function 1`] = `
<div
  className="root"
>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        light={true}
        secondary={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon 1`] = `
<div
  className="root"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon in compact mode 1`] = `
<div
  className="root"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={false}
      regular={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon in hasHoverState mode 1`] = `
<div
  className="root hasHoverState"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon with badge with hasHoverState and compact mode 1`] = `
<div
  className="root hasHoverState"
>
  <div
    className="listItemIcon"
  >
    <Education icon />
  </div>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={false}
      regular={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={true}
        semiStrong={false}
      >
        testValue
      </Text>
      <span
        className="listItemBadge"
      >
        <Badge
          color="default"
          isBold={true}
          label="badge"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render title value 1`] = `
<div
  className="root"
>
  <div>
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
      regular={false}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render value 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render with className 1`] = `
<div
  className="root"
>
  <div>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;
